Control panel: Error messages will now show on order details page. Extensions: Fixed credit card forms of the PayPal Pro and PayPal Pro UK extensions. Storefront: Added missing loading_1.gif image and "ws_nowrap" CSS class.

--- a/public_html/storefront/view/default_html5/stylesheet/style.css
+++ b/public_html/storefront/view/default_html5/stylesheet/style.css
@@ -3832,3 +3832,7 @@ table th {
 	border-bottom: 1px dashed #999;
 	padding: 0 0 5px 0
 }
+
+.ws_nowrap {
+	white-space: nowrap;
+}
